--- a/index.html
+++ b/index.html
@@ -24,79 +24,79 @@
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
 	<!-- Header -->
-	<header>
-		<!-- Navbar -->
-		<nav class="navbar navbar-expand-lg navbar-light bg-light bg-shadow fixed-top">
-			<a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<header>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light bg-shadow fixed-top">
+		<a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon">
               </span>
              </button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="#myPage">Home<span class="sr-only">(current)</span>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#about">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#schedule">Schedule</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#contact">Contact</a>
-					</li>
-				</ul>
-				<!--Social Media Links-->
-				<ul class="nav navbar-right ml-auto">
-					<li class="nav-item">
-						<a class="nav-link waves-effect waves-light" href="https://www.twitter.com" target="_blank">
-							<i class="fab fa-twitter-square"></i>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link waves-effect waves-light" href="https://www.facebook.com" target="_blank">
-							<i class="fab fa-facebook-square"></i>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link waves-effect waves-light" href="https://www.instagram.com" target="_blank">
-							<i class="fab fa-instagram-square"></i>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link waves-effect waves-light" href="https://www.pinterest.com" target="_blank">
-							<i class="fab fa-pinterest"></i>
-						</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-		<!--./navbar-->
-	</header>
-	<!--./header-->
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="#myPage">Home<span class="sr-only">(current)</span>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#about">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#schedule">Schedule</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#contact">Contact</a>
+				</li>
+			</ul>
+			<!--Social Media Links-->
+			<ul class="nav navbar-right ml-auto">
+				<li class="nav-item">
+					<a class="nav-link waves-effect waves-light" href="https://www.twitter.com" target="_blank">
+						<i class="fab fa-twitter-square"></i>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link waves-effect waves-light" href="https://www.facebook.com" target="_blank">
+						<i class="fab fa-facebook-square"></i>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link waves-effect waves-light" href="https://www.instagram.com" target="_blank">
+						<i class="fab fa-instagram-square"></i>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link waves-effect waves-light" href="https://www.pinterest.com" target="_blank">
+						<i class="fab fa-pinterest"></i>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<!--./navbar-->
+</header>
+<!--./header-->
 
-	<!--Main Content-->
-	<main>
-		<!-- Jumbotron Container-->
-		<section class="jumbotron-container">
-			<!--Jumbotron Overlay-->
-			<div class="jumbotron-overlay">&nbsp;</div>
-			<!--./jumbotron-overlay-->
-			<div class="jumbotron-fluid">
-				<div class="container">
-					<div class="row">
-						<div class="col-12 enter">
-							<h1 class="display-3">Infinity</h1>
-							<h2 class="lead" style="color:#f2f2f2;">Yoga and Meditation Studio</h2>
-							<p><a class="btn btn-info btn-lg" href="#schedule" role="button">Schedule &raquo;</a></p>
-						</div>
-					</div>
+<!--Page Content-->
+<main>
+<!-- Jumbotron Container-->
+<section class="jumbotron-container">
+	<!--Jumbotron Overlay-->
+	<div class="jumbotron-overlay">&nbsp;</div>
+	<!--./jumbotron-overlay-->
+	<div class="jumbotron-fluid">
+		<div class="container">
+			<div class="row">
+				<div class="col-12 enter">
+					<h1 class="display-3">Infinity</h1>
+					<h2 class="lead" style="color:#f2f2f2;">Yoga and Meditation Studio</h2>
+					<p><a class="btn btn-info btn-lg" href="#schedule" role="button">Schedule &raquo;</a></p>
 				</div>
 			</div>
-		</section>
-		<!--./jumbotron-container-->
+		</div>
+	</div>
+</section>
+<!--./jumbotron-container-->
 
 <!--About-->
 <section id="about">
@@ -111,153 +111,155 @@
 			<div class="flex-column col-12">
 			</div>
 			<div class="flex-column col-12">
-				<p class="text-md-center font-weight-normal"> The staff of Infinity is proud to offer diverse classes, a
-					flexible schedule and fair prices. We love what we do and we believe everybody should experience the
+				<p class="text-md-center font-weight-normal"> The staff of Infinity is proud to offer diverse
+					classes, a
+					flexible schedule and fair prices. We love what we do and we believe everybody should
+					experience the
 					peace, love &amp; eternal happiness that we feel at our studio.
-			</p>
-		</div>
-	</div>
-<!--Why Infinity Container-->
-<div class="container-fluid text-center">
-	<h3 class="about-header">Why Infinity?</h3>
-	<div class="row">
-		<div class="col-xs-8 col-sm-4">
-			<div class="about">
-				<i class="fas fa-brain d-sm-block"></i>
-				<h4 class="about-header">Mind</h4>
-				<p class="display-4 about-content">Yoga increases healthy brain function &amp; mental
-					clarity</p>
-			</div>
-		</div>
-		<div class="col-xs-8 col-sm-4">
-			<div class="about">
-				<i class="fas fa-fire-alt d-sm-block"></i>
-				<h4 class="about-header">Body</h4>
-				<p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
-			</div>
-		</div>
-		<div class="col-xs-8 col-sm-4">
-			<div class="about">
-				<i class="fas fa-praying-hands d-sm-block"></i>
-				<h4 class="about-header">Spirit</h4>
-				<p class="display-4 about-content">Find your inner strength through meditation.</p>
-			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-8 col-sm-4">
-			<div class="about">
-				<i class="fas fa-peace  d-sm-block"></i>
-				<h4 class="about-header">Peace</h4>
-				<p class="display-4 about-content">Forget all the stress and focus on you.
 				</p>
 			</div>
 		</div>
-		<div class="col-xs-8 col-sm-4">
-			<div class="about">
-				<i class="fas fa-heart d-sm-block"></i>
-				<h4 class="about-header">Love</h4>
-				<p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
+		<!--Why Infinity Container-->
+		<div class="container-fluid text-center">
+			<h3 class="about-header">Why Infinity?</h3>
+			<div class="row">
+				<div class="col-xs-8 col-sm-4">
+					<div class="about">
+						<i class="fas fa-brain d-sm-block"></i>
+						<h4 class="about-header">Mind</h4>
+						<p class="display-4 about-content">Yoga increases healthy brain function &amp; mental
+							clarity</p>
+					</div>
+				</div>
+				<div class="col-xs-8 col-sm-4">
+					<div class="about">
+						<i class="fas fa-fire-alt d-sm-block"></i>
+						<h4 class="about-header">Body</h4>
+						<p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
+					</div>
+				</div>
+				<div class="col-xs-8 col-sm-4">
+					<div class="about">
+						<i class="fas fa-praying-hands d-sm-block"></i>
+						<h4 class="about-header">Spirit</h4>
+						<p class="display-4 about-content">Find your inner strength through meditation.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-8 col-sm-4">
+					<div class="about">
+						<i class="fas fa-peace  d-sm-block"></i>
+						<h4 class="about-header">Peace</h4>
+						<p class="display-4 about-content">Forget all the stress and focus on you.
+						</p>
+					</div>
+				</div>
+				<div class="col-xs-8 col-sm-4">
+					<div class="about">
+						<i class="fas fa-heart d-sm-block"></i>
+						<h4 class="about-header">Love</h4>
+						<p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
+					</div>
+				</div>
+				<div class="col-xs-8 col-sm-4">
+					<div class="about">
+						<i class="fas fa-yin-yang d-sm-block"></i>
+						<h4 class="about-header">Harmony </h4>
+						<p class="display-4 about-content">Bring harmony &amp; balance into your life.</p>
+					</div>
+				</div>
+				<!--./why-infinity-container-->
 			</div>
 		</div>
-		<div class="col-xs-8 col-sm-4">
-			<div class="about">
-				<i class="fas fa-yin-yang d-sm-block"></i>
-				<h4 class="about-header">Harmony </h4>
-				<p class="display-4 about-content">Bring harmony &amp; balance into your life.</p>
-			</div>
-		</div>
-		<!--./why-infinity-container-->
 	</div>
-</div>
-</div>
 </section>
 <!--./about-->
 
-		<!-- Schedule Section-->
-		<!-- This code was copied from & inspired by W3Schools.com
+<!-- Schedule Section-->
+<!-- This code was copied from & inspired by W3Schools.com https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
+<section id="schedule">
+	<div class="container-wrapper-blue">
+		<div class="container-fluid">
+			<h2 class="section-header">Schedule</h2>
+			<hr>
+			<p class="schedule-content">We hope to see you soon!</p>
+			<div class="row">
+				<div class="col-xs-8 col-sm-4">
+					<div class="text-center">
+						<img src="assets/images/vinyasa.jpg" class="img-thumbnail rounded" alt="Vinyasa Flow">
+						<h6><strong>Vinyasa Flow</strong></h6>
+						<p class="text-muted">Tuesdays, 7:00pm</p>
+					</div>
+				</div>
+
+				<div class="col-xs-8 col-sm-4">
+					<div class="text-center">
+						<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded" alt="Rooftop">
+						<h6><strong>Rooftop Yoga</strong></h6>
+						<p class="text-muted">Thursdays, 7:00pm</p>
+					</div>
+				</div>
+
+				<div class="col-xs-8 col-sm-4">
+					<div class="text-center">
+						<img src="assets/images/meditate.jpg" class="img-thumbnail rounded" alt="Meditation">
+						<h6><strong>Raiki</strong></h6>
+						<p class="text-muted">Sundays, 4:00pm</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<!--./schedule-section-->
+
+<!--Contact Section-->
+<!-- This code was copied from & inspired by W3Schools.com
     https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
-		<section id="schedule">
-			<div class="container-wrapper-blue">
-				<div class="container-fluid">
-					<h2 class="section-header">Schedule</h2>
-					<hr>
-					<p class="schedule-content">We hope to see you soon!</p>
-					<div class="row">
-						<div class="col-xs-8 col-sm-4">
-							<div class="text-center">
-								<img src="assets/images/vinyasa.jpg" class="img-thumbnail rounded" alt="Vinyasa Flow">
-								<h6><strong>Vinyasa Flow</strong></h6>
-								<p class="text-muted">Tuesdays, 7:00pm</p>
-							</div>
+<section id="contact">
+	<div class="container-fluid">
+		<h2 class="section-header">Contact Us</h2>
+		<hr>
+		<div class="row">
+			<div class="col-xs-8 col-sm-4">
+				<p class="text-sm-left"><i class="fas fa-map-marker-alt"></i><span> New York, New York</span>
+				</p>
+				<p class="text-sm-left"><i class="fas fa-phone"></i> +1.212.000.0000 </p>
+				<p class="text-sm-left"><i class="fas fa-envelope-open"></i> owner@infinty.nyc</p>
+			</div>
+			<div class="col-xs-4 col-sm-8">
+				<div class="row">
+					<div class="form-group">
+						<input class="form-control" id="name" name="name" placeholder="Name" type="text" required="">
+                </div>
+						<div class="form-group">
+							<input class="form-control" id="email" name="email" placeholder="Email" type="email" required="">
+                </div>
 						</div>
-
-						<div class="col-xs-8 col-sm-4">
-							<div class="text-center">
-								<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded" alt="Rooftop">
-								<h6><strong>Rooftop Yoga</strong></h6>
-								<p class="text-muted">Thursdays, 7:00pm</p>
-							</div>
-						</div>
-
-						<div class="col-xs-8 col-sm-4">
-							<div class="text-center">
-								<img src="assets/images/meditate.jpg" class="img-thumbnail rounded" alt="Meditation">
-								<h6><strong>Raiki</strong></h6>
-								<p class="text-muted">Sundays, 4:00pm</p>
+						<textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="3"></textarea>
+						<div class="row">
+							<div class="col-12 col-sm-12 form-group">
+								<button class="btn btn-info float-right" type="submit">Send</button>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
-		<!--./schedule-section-->
-
-		<!--Contact Section-->
-		<!-- This code was copied from & inspired by W3Schools.com
-    https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
-		<section id="contact">
-			<div class="container-fluid">
-				<h2 class="section-header">Contact Us</h2>
-				<hr>
-				<div class="row">
-					<div class="col-xs-8 col-sm-4">
-						<p class="text-sm-left"><i class="fas fa-map-marker-alt"></i><span> New York, New York</span>
-						</p>
-						<p class="text-sm-left"><i class="fas fa-phone"></i> +1.212.000.0000 </p>
-						<p class="text-sm-left"><i class="fas fa-envelope-open"></i> owner@infinty.nyc</p>
-					</div>
-					<div class="col-xs-4 col-sm-8">
-						<div class="row">
-							<div class="form-group">
-								<input class="form-control" id="name" name="name" placeholder="Name" type="text" required="">
-                </div>
-								<div class="form-group">
-									<input class="form-control" id="email" name="email" placeholder="Email" type="email" required="">
-                </div>
-								</div>
-								<textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="3"></textarea>
-								<div class="row">
-									<div class="col-12 col-sm-12 form-group">
-										<button class="btn btn-info float-right" type="submit">Send</button>
-									</div>
-								</div>
-							</div>
-						</div>
-			</div>
-    </section>
+</section>
 <!--./contact-section-->
-	</main>
-	<!--Footer-->
-	<section id="footer">
-		<footer class="container-fluid text-center">
-			<a href="#myPage" title="To Top">
-				<i class="fas fa-chevron-up"></i>
-			</a>
-			<h6>2020 Alissa Troiano | Code Institute Project</h6>
-		</footer>
-	</section>
-	<!--./footer-->
+</main>
+
+<!--Footer-->
+<section id="footer">
+	<footer class="container-fluid text-center">
+		<a href="#myPage" title="To Top">
+			<i class="fas fa-chevron-up"></i>
+		</a>
+		<h6>2020 Alissa Troiano | Code Institute Project</h6>
+	</footer>
+</section>
+<!--./footer-->
 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
