--- a/index.html
+++ b/index.html
@@ -248,6 +248,37 @@
 			</div>
 </section>
 <!--./contact-section-->
+
+<!--Quotes-->
+<section class="quotes" style="background-color: #90bfc0;">
+	<div class="container-fluid">
+		<h2 class="section-header">Quotes</h2>
+		<hr>
+		<div class="row">
+			<div class="col-xs-8 col-sm-4">
+				<figure class="figure">
+					<img src="https://images.pexels.com/photos/3768918/pexels-photo-3768918.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" class="figure-img img-fluid rounded-circle" alt="woman's face">
+					<figcaption class="figure-caption text-center">A quote from this yoga student</figcaption>
+				</figure>
+			</div>
+
+			<div class="col-xs-8 col-sm-4">
+				<figure class="figure">
+					<img src="https://images.pexels.com/photos/3768918/pexels-photo-3768918.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" class="figure-img img-fluid rounded-circle" alt="woman's face">
+					<figcaption class="figure-caption text-center">A quote from this yoga student</figcaption>
+				</figure>
+			</div>
+
+			<div class="col-xs-8 col-sm-4">
+				<figure class="figure">
+					<img src="https://images.pexels.com/photos/3768918/pexels-photo-3768918.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" class="figure-img img-fluid rounded-circle" alt="woman's face">
+					<figcaption class="figure-caption text-center">A quote from this yoga student</figcaption>
+				</figure>
+			</div>
+		</div>
+	</div>
+</section>
+<!--./quotes-->
 </main>
 
 <!--Footer-->
