--- a/index.html
+++ b/index.html
@@ -179,7 +179,6 @@
 <!-- Schedule Section-->
 <!-- This code was copied from & inspired by W3Schools.com https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section id="schedule">
-	<div class="container-wrapper-blue">
 		<div class="container-fluid">
 			<h2 class="section-header">Schedule</h2>
 			<hr>
@@ -210,39 +209,30 @@
 				</div>
 			</div>
 		</div>
-	</div>
 </section>
 <!--./schedule-section-->
 
 <!--Contact Section-->
-<!-- This code was copied from & inspired by W3Schools.com
-    https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section id="contact">
 	<div class="container-fluid">
 		<h2 class="section-header">Contact Us</h2>
 		<hr>
 		<div class="row">
 			<div class="col-xs-8 col-sm-4">
-				<p class="text-sm-left"><i class="fas fa-map-marker-alt"></i><span> New York, New York</span>
-				</p>
+				<p class="text-sm-left"><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
 				<p class="text-sm-left"><i class="fas fa-phone"></i> +1.212.000.0000 </p>
 				<p class="text-sm-left"><i class="fas fa-envelope-open"></i> owner@infinty.nyc</p>
 			</div>
 			<div class="col-xs-4 col-sm-8">
-				<div class="row">
+				<div class="form-group">
+					<input class="form-control" id="name" name="name" placeholder="Name" type="text" required="">
+                </div>
 					<div class="form-group">
-						<input class="form-control" id="name" name="name" placeholder="Name" type="text" required="">
+						<input class="form-control" id="email" name="email" placeholder="Email" type="email" required="">
                 </div>
-						<div class="form-group">
-							<input class="form-control" id="email" name="email" placeholder="Email" type="email" required="">
-                </div>
-						</div>
 						<textarea class="form-control" id="comments" name="comments" placeholder="Comments" rows="3"></textarea>
-						<div class="row">
-							<div class="col-12 col-sm-12 form-group">
-								<button class="btn btn-info float-right" type="submit">Send</button>
-							</div>
-						</div>
+						<br>
+						<button class="btn btn-info float-right" type="submit">Send</button>
 					</div>
 				</div>
 			</div>
