--- a/index.html
+++ b/index.html
@@ -179,36 +179,36 @@
 <!-- Schedule Section-->
 <!-- This code was copied from & inspired by W3Schools.com https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
 <section id="schedule">
-		<div class="container-fluid">
-			<h2 class="section-header">Schedule</h2>
-			<hr>
-			<p class="schedule-content">We hope to see you soon!</p>
-			<div class="row">
-				<div class="col-xs-8 col-sm-4">
-					<div class="text-center">
-						<img src="assets/images/vinyasa.jpg" class="img-thumbnail rounded" alt="Vinyasa Flow">
-						<h6><strong>Vinyasa Flow</strong></h6>
-						<p class="text-muted">Tuesdays, 7:00pm</p>
-					</div>
+	<div class="container-fluid">
+		<h2 class="section-header">Schedule</h2>
+		<hr>
+		<p class="schedule-content">We hope to see you soon!</p>
+		<div class="row">
+			<div class="col-xs-8 col-sm-4">
+				<div class="text-center">
+					<img src="assets/images/vinyasa.jpg" class="img-thumbnail rounded" alt="Vinyasa Flow">
+					<h6><strong>Vinyasa Flow</strong></h6>
+					<p class="text-muted">Tuesdays, 7:00pm</p>
 				</div>
+			</div>
 
-				<div class="col-xs-8 col-sm-4">
-					<div class="text-center">
-						<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded" alt="Rooftop">
-						<h6><strong>Rooftop Yoga</strong></h6>
-						<p class="text-muted">Thursdays, 7:00pm</p>
-					</div>
+			<div class="col-xs-8 col-sm-4">
+				<div class="text-center">
+					<img src="assets/images/rooftopyoga.jpg" class="img-thumbnail rounded" alt="Rooftop">
+					<h6><strong>Rooftop Yoga</strong></h6>
+					<p class="text-muted">Thursdays, 7:00pm</p>
 				</div>
+			</div>
 
-				<div class="col-xs-8 col-sm-4">
-					<div class="text-center">
-						<img src="assets/images/meditate.jpg" class="img-thumbnail rounded" alt="Meditation">
-						<h6><strong>Raiki</strong></h6>
-						<p class="text-muted">Sundays, 4:00pm</p>
-					</div>
+			<div class="col-xs-8 col-sm-4">
+				<div class="text-center">
+					<img src="assets/images/meditate.jpg" class="img-thumbnail rounded" alt="Meditation">
+					<h6><strong>Raiki</strong></h6>
+					<p class="text-muted">Sundays, 4:00pm</p>
 				</div>
 			</div>
 		</div>
+	</div>
 </section>
 <!--./schedule-section-->
 
@@ -219,9 +219,9 @@
 		<hr>
 		<div class="row">
 			<div class="col-xs-8 col-sm-4">
-				<p class="text-sm-left"><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
-				<p class="text-sm-left"><i class="fas fa-phone"></i> +1.212.000.0000 </p>
-				<p class="text-sm-left"><i class="fas fa-envelope-open"></i> owner@infinty.nyc</p>
+				<p class="text-sm-justify"><i class="fas fa-map-marker-alt"></i><span> New York, New York</span></p>
+				<p class="text-sm-justify"><i class="fas fa-phone"></i> +1.212.000.0000 </p>
+				<p class="text-sm-justify"><i class="fas fa-envelope-open"></i> owner@infinty.nyc</p>
 			</div>
 			<div class="col-xs-4 col-sm-8">
 				<div class="form-group">
@@ -240,7 +240,8 @@
 <!--./contact-section-->
 
 <!--Quotes-->
-<section class="quotes" style="background-color: #90bfc0;">
+<section id="quotes">
+<div class="quotes-container">
 	<div class="container-fluid">
 		<h2 class="section-header">Quotes</h2>
 		<hr>
@@ -267,6 +268,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 </section>
 <!--./quotes-->
 </main>
