Repaired image avatar classes and styled figures

--- a/index.html
+++ b/index.html
@@ -246,24 +246,24 @@
 		<h2 class="section-header">Quotes</h2>
 		<hr>
 		<div class="row">
-			<div class="col-xs-8 col-sm-4">
+			<div class="col-xs-8 col-sm-4 text-center">
 				<figure class="figure">
 					<img src="https://images.pexels.com/photos/3768918/pexels-photo-3768918.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" class="figure-img img-fluid rounded-circle" alt="woman's face">
-					<figcaption class="figure-caption text-center">A quote from this yoga student</figcaption>
+					<figcaption class="figure-caption">"A quote from this yoga student"</figcaption>
 				</figure>
 			</div>
 
-			<div class="col-xs-8 col-sm-4">
+			<div class="col-xs-8 col-sm-4 text-center">
 				<figure class="figure">
 					<img src="https://images.pexels.com/photos/3768918/pexels-photo-3768918.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" class="figure-img img-fluid rounded-circle" alt="woman's face">
-					<figcaption class="figure-caption text-center">A quote from this yoga student</figcaption>
+					<figcaption class="figure-caption">"A quote from this yoga student"</figcaption>
 				</figure>
 			</div>
 
-			<div class="col-xs-8 col-sm-4">
+			<div class="col-xs-8 col-sm-4 text-center">
 				<figure class="figure">
 					<img src="https://images.pexels.com/photos/3768918/pexels-photo-3768918.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" class="figure-img img-fluid rounded-circle" alt="woman's face">
-					<figcaption class="figure-caption text-center">A quote from this yoga student</figcaption>
+					<figcaption class="figure-caption">"A quote from this yoga student"</figcaption>
 				</figure>
 			</div>
 		</div>
