Styled 404 Page with project color palette

--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
 <div class="notfound">
 <div class="notfound-404">
 <h1>404</h1>
-<h2 class="404">KARMA IS A</h2>
+<h2 class="404">KARMA'S A</h2>
 </div>
 <a href="index.html">TAKE ME OM!</a>
 <a class="button" href="404.html">NAMASTE HERE</a>
