Repaired styling issues in section containers

--- a/index.html
+++ b/index.html
@@ -277,14 +277,12 @@
 </main>
 
 <!--Footer-->
-<section id="footer">
-	<footer class="container-fluid text-center">
+<footer class="text-center">
 		<a href="#myPage" title="To Top">
 			<i class="fas fa-chevron-up"></i>
 		</a>
 		<h6>2020 Alissa Troiano | Code Institute Project</h6>
 	</footer>
-</section>
 <!--./footer-->
 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
