--- a/index.html
+++ b/index.html
@@ -240,14 +240,46 @@
 <!--./contact-->
 
 <!--Quotes-->
-<section id="quotes">
-	<div class="quotes-container">
-		<div class="container-fluid">
-			<h2 class="section-header">Quotes</h2>
-			<hr>
-			<div class="row">
-				<div class="col-xs-8 col-sm-4 text-center">
-					<figure class="figure">
+<div class="container-wrapper">
+	<div class="container-fluid quotes-container">
+		<section id="quotes" class="quotes">
+			<div class="row text-center">
+				<div class="col-12 section-header">
+					<h2 class="section-header">Quotes</h2>
+					<p>Here are some quotes from our studio members!</p>
+					<hr>
+				</div>
+			</div>
+
+	<div class="row text-center">
+		<!--Grid for card deck-->		
+		<div class="col-xs-8 col-sm-4">
+			<!--First Card-->
+			<div class="card testimonial-card">
+				<div class="card-up teal lighten-3"></div>
+				<div class="avatar mx-auto white">
+					<img src="assets/images/quotes1.png" alt="avatar 1" class="rounded-circle img-fluid">
+				</div>
+				
+				<div class="card-body">
+					<!--Card Quotation-->
+					<blockquote><i class="fas fa-quote-left"></i> As a yoga student, I am happy that I can find Infinity’s address from
+						any device, so I know where to go!</blockquote>
+					<hr>
+					<footer class="blockquote-footer">Octavia Bliss <cite title="Source Title">Infinty Studio Member</cite></footer>
+				</div>
+				</div>
+				</div>
+
+			  
+
+</div>
+
+
+
+
+
+				<figure class="figure">
 						<img src="https://images.pexels.com/photos/3768918/pexels-photo-3768918.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260"
 							class="figure-img img-fluid rounded-circle" alt="woman's face">
 						<figcaption class="figure-caption">"A quote from this yoga student"</figcaption>
@@ -270,19 +302,19 @@
 					</figure>
 				</div>
 			</div>
-		</div>
-	</div>
 </section>
+</div>
+</div>
 <!--./quotes-->
 </main>
 
 <!--Footer-->
 <footer class="text-center">
-		<a href="#myPage" title="To Top">
-			<i class="fas fa-chevron-up"></i>
-		</a>
-		<h6>2020 Alissa Troiano | Code Institute Project</h6>
-	</footer>
+	<a href="#myPage" title="To Top">
+		<i class="fas fa-chevron-up"></i>
+	</a>
+	<h6>2020 Alissa Troiano | Code Institute Project</h6>
+</footer>
 <!--./footer-->
 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
