Updated quotes content, imported, adding and styled avatar images

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 <!--./jumbotron-container-->
 
 <!--About-->
+<div class="container-wrapper-about">
 <section id="about">
 	<div class="container-fluid">
 		<div class="row">
@@ -175,6 +176,7 @@
 	</div>
 </section>
 <!--./about-->
+</div>
 
 <!-- Schedule-->
 <section id="schedule">
@@ -239,9 +241,10 @@
 </section>
 <!--./contact-->
 
-<!--Quotes-->
-<div class="container-wrapper">
+<!--Quotes Container-->
+<div class="container-wrapper-quotes">
 	<div class="container-fluid quotes-container">
+		<!--Quotes-->
 		<section id="quotes" class="quotes">
 			<div class="row text-center">
 				<div class="col-12 section-header">
@@ -250,62 +253,70 @@
 					<hr>
 				</div>
 			</div>
+			
+			<div class="row text-center">
+				<!--Grid for card deck-->
+				<div class="col-xs-8 col-sm-4">
+					<!--First Card-->
+					<div class="card quote-card">
+						<div class="card-top top-color"></div>
+						<div class="avatar mx-auto white">
+							<img src="assets/images/quotes1.png" alt="avatar 1" class="rounded-circle img-fluid">
+						</div>
+						<!--Card Body-->
+						<div class="card-body">
+							<h4 class="card-title mt-1">Octavia Bliss</h4>
+							<hr class="quotes">
+							<!--Blockquote-->
+							<blockquote><i class="fas fa-quote-left"></i> As a yoga student, I am happy that I can find Infinity’s
+								address from any device, so I know where to go!</blockquote>
+						</div>
+					</div>
+				</div>
 
-	<div class="row text-center">
-		<!--Grid for card deck-->		
-		<div class="col-xs-8 col-sm-4">
-			<!--First Card-->
-			<div class="card testimonial-card">
-				<div class="card-up teal lighten-3"></div>
-				<div class="avatar mx-auto white">
-					<img src="assets/images/quotes1.png" alt="avatar 1" class="rounded-circle img-fluid">
+				<!--Grid for card deck-->
+				<div class="col-xs-8 col-sm-4">
+					<!--Second Card-->
+					<div class="card quote-card">
+						<div class="card-top top-color"></div>
+						<div class="avatar mx-auto white">
+							<img src="assets/images/quotes3.png" alt="avatar 2" class="rounded-circle img-fluid">
+						</div>
+						<!--Card Body-->
+						<div class="card-body">
+							<h4 class="card-title mt-1">Daniel Zen</h4>
+							<hr class="quotes">
+							<!--Blockquote-->
+							<blockquote><i class="fas fa-quote-left"></i> As a studio member, I love that I can find classes on
+								 Infinity's website, so I know when to go!</blockquote>
+						</div>
+					</div>
 				</div>
 				
-				<div class="card-body">
-					<!--Card Quotation-->
-					<blockquote><i class="fas fa-quote-left"></i> As a yoga student, I am happy that I can find Infinity’s address from
-						any device, so I know where to go!</blockquote>
-					<hr>
-					<footer class="blockquote-footer">Octavia Bliss <cite title="Source Title">Infinty Studio Member</cite></footer>
-				</div>
-				</div>
-				</div>
-
-			  
-
-</div>
-
-
-
-
-
-				<figure class="figure">
-						<img src="https://images.pexels.com/photos/3768918/pexels-photo-3768918.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260"
-							class="figure-img img-fluid rounded-circle" alt="woman's face">
-						<figcaption class="figure-caption">"A quote from this yoga student"</figcaption>
-					</figure>
-				</div>
-
-				<div class="col-xs-8 col-sm-4 text-center">
-					<figure class="figure">
-						<img src="https://images.pexels.com/photos/3768918/pexels-photo-3768918.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260"
-							class="figure-img img-fluid rounded-circle" alt="woman's face">
-						<figcaption class="figure-caption">"A quote from this yoga student"</figcaption>
-					</figure>
-				</div>
-
-				<div class="col-xs-8 col-sm-4 text-center">
-					<figure class="figure">
-						<img src="https://images.pexels.com/photos/3768918/pexels-photo-3768918.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260"
-							class="figure-img img-fluid rounded-circle" alt="woman's face">
-						<figcaption class="figure-caption">"A quote from this yoga student"</figcaption>
-					</figure>
+				<!--Grid for card deck-->
+				<div class="col-xs-8 col-sm-4">
+					<!--Third Card-->
+					<div class="card quote-card">
+						<div class="card-top top-color"></div>
+						<div class="avatar mx-auto white">
+							<img src="assets/images/quotes2.png" alt="avatar 3" class="rounded-circle img-fluid">
+						</div>
+						<!--Card Body-->
+						<div class="card-body">
+							<h4 class="card-title mt-1">Sara Solar</h4>
+							<hr class="quotes">
+							<!--Blockquote-->
+							<blockquote><i class="fas fa-quote-left"></i> As an Infinity member, I can contact the studio from their website, 
+								so I never have to go out of my way!</blockquote>
+						</div>
+					</div>
 				</div>
 			</div>
-</section>
-</div>
-</div>
+		</section>
 <!--./quotes-->
+	</div>
+</div>
+<!--./quotes-container-->
 </main>
 
 <!--Footer-->
