--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 							<h4 class="card-title mt-1">Daniel Zen</h4>
 							<hr class="quotes">
 							<!--Blockquote-->
-							<blockquote><i class="fas fa-quote-left"></i> As a studio member, I love that I can find classes on
+							<blockquote><i class="fas fa-quote-left"></i> As a studio member, I love that I can find class times on
 								 Infinity's website, so I know when to go!</blockquote>
 						</div>
 					</div>
@@ -306,7 +306,7 @@
 							<h4 class="card-title mt-1">Sara Solar</h4>
 							<hr class="quotes">
 							<!--Blockquote-->
-							<blockquote><i class="fas fa-quote-left"></i> As an Infinity member, I can contact the studio from their website, 
+							<blockquote><i class="fas fa-quote-left"></i> As an Infinity member, I can contact them from their website, 
 								so I never have to go out of my way!</blockquote>
 						</div>
 					</div>
