Updated README, imported Adobe Fonts for logo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<!-- Font Awesome CDN -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
 		integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
+	<!--Adobe Fonts-->
+	<link rel="stylesheet" href="https://use.typekit.net/hdw8ydb.css">
 	<!-- Custom Stylesheet -->
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 	<!-- Title -->
@@ -268,8 +270,7 @@
 							<h4 class="card-title mt-1">Octavia Bliss</h4>
 							<hr class="quotes">
 							<!--Blockquote-->
-							<blockquote><i class="fas fa-quote-left"></i> As a yoga student, I am happy that I can find Infinity’s
-								address from any device, so I know where to go!</blockquote>
+							<blockquote><i class="fas fa-quote-left"></i> Infinity is the best place to strengthen your yoga practice. The instructors are dedicated, patient & thorough! </blockquote>
 						</div>
 					</div>
 				</div>
