Removed extra class, tested and repaired stylesheet

--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 	<!-- Bootstrap CDN -->
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Font Awesome CDN -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
-		integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
-	<!--Adobe Fonts-->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
+	<!--Import Futura from Adobe Fonts-->
 	<link rel="stylesheet" href="https://use.typekit.net/hdw8ydb.css">
+	<!--Favicon Link-->
+	<link rel="shortcut icon" type="image/ico" href="assets/images/favicon.ico" />
 	<!-- Custom Stylesheet -->
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 	<!-- Title -->
 	<title>Infinity Yoga | Yoga and Meditation in NYC </title>
-	<!--Favicon Link-->
-	<link rel="shortcut icon" type="image/ico" href="assets/images/favicon.ico" />
 </head>
 
 <!-- Body -->
@@ -89,7 +88,7 @@
 		<div class="jumbotron-fluid">
 			<div class="container">
 				<div class="row">
-					<div class="col-12 enter">
+					<div class="col-12">
 						<h1 class="display-3">Infinity</h1>
 						<h2 class="lead" style="color:#f2f2f2;">Yoga and Meditation Studio</h2>
 						<p><a class="btn btn-info btn-lg" href="#schedule" role="button">Schedule &raquo;</a></p>
