Repositioned blockquote icon to improve visibility

--- a/index.html
+++ b/index.html
@@ -308,7 +308,8 @@
 							<h4 class="card-title mt-1">Octavia Bliss</h4>
 							<hr class="quotes">
 							<!--Blockquote-->
-							<blockquote><i class="fas fa-quote-left"></i> Infinity is the best place to strengthen your yoga practice. The instructors are dedicated, patient & thorough! </blockquote>
+							<i class="fas fa-quote-left"></i>
+							<blockquote> Infinity is the best place to strengthen your yoga practice. The instructors are dedicated, patient & thorough! </blockquote>
 						</div>
 					</div>
 				</div>
@@ -326,7 +327,8 @@
 							<h4 class="card-title mt-1">Daniel Zen</h4>
 							<hr class="quotes">
 							<!--Blockquote-->
-							<blockquote><i class="fas fa-quote-left"></i> As a studio member, I love that I can find class times on
+							<i class="fas fa-quote-left"></i> 
+							<blockquote>As a studio member, I love that I can find class times on
 								 Infinity's website, so I know when to go!</blockquote>
 						</div>
 					</div>
@@ -345,7 +347,8 @@
 							<h4 class="card-title mt-1">Sara Solar</h4>
 							<hr class="quotes">
 							<!--Blockquote-->
-							<blockquote><i class="fas fa-quote-left"></i> As an Infinity member, I can contact them from their website, 
+							<i class="fas fa-quote-left"></i> 
+							<blockquote> As an Infinity member, I can contact them from their website, 
 								so I never have to go out of my way!</blockquote>
 						</div>
 					</div>
