--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="https://use.typekit.net/hdw8ydb.css">
 	<!--Favicon Link-->
 	<link rel="shortcut icon" type="image/ico" href="assets/images/favicon.ico" />
+	<link rel="shortcut icon" type="image/ico" href="assets/images/favicon.png" />
 	<!-- Custom Stylesheet -->
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 	<!-- Title -->
