--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
 					<div class="row text-center">
 						<div class="col-12 section-header">
 							<h2 class="section-header">Schedule</h2>
-							<p>We hope to see you soon!</p>
 							<hr>
+							<p>We hope to see you soon!</p>
 						</div>
 					</div>
 
@@ -211,7 +211,7 @@
 								<div class="card-body">
 									<h4 class="card-title mt-1">Vinyasa Flow</h4>
 									<p class="text-muted">Thursday, 7:00pm | 90 minutes</p>
-									<hr class="schedule">
+									<hr>
 									<p>Flow through a sequence of Sun Salutations and standing postures, linking breath
 										and movement.</p>
 									<div class="signUp"><a class="nav-item" href="#">Sign Up</a>
@@ -237,7 +237,7 @@
 								<div class="card-body">
 									<h4 class="card-title mt-1">Restorative Yoga</h4>
 									<p class="text-muted">Sundays, 11:00am | 60 minutes</p>
-									<hr class="schedule">
+									<hr>
 									<p>Use the support of blankets and bolsters to experience complete relaxation of
 										body & mind.</p>
 									<div class="signUp"><a class="nav-item" href="#">Sign Up</a>
@@ -263,7 +263,7 @@
 								<div class="card-body">
 									<h4 class="card-title mt-1">Chakra Cleansing</h4>
 									<p class="text-muted">Mondays, 7:00pm | 90 minutes</p>
-									<hr class="schedule">
+									<hr>
 									<p> Experience healing as an instructor walks you through cleansing techniques and
 										meditation.</p>
 									<div class="signUp"><a class="nav-item" href="#">Sign Up</a>
@@ -289,10 +289,10 @@
 				<hr>
 				<div class="row">
 					<div class="col-xs-8 col-sm-4">
-						<p class="text-sm-justify"><i class="fas fa-map-marker-alt"></i><span> New York, New York</span>
+						<p><i class="fas fa-map-marker-alt"></i><span> New York, New York</span>
 						</p>
-						<p class="text-sm-justify"><i class="fas fa-phone"></i> +1.212.000.0000 </p>
-						<p class="text-sm-justify"><i class="fas fa-envelope-open"></i> owner@infinty.nyc</p>
+						<p><i class="fas fa-phone"></i> +1.212.000.0000 </p>
+						<p><i class="fas fa-envelope-open"></i> owner@infinty.nyc</p>
 					</div>
 					<div class="col-xs-4 col-sm-8">
 						<div class="form-group">
@@ -321,11 +321,10 @@
 					<div class="row text-center">
 						<div class="col-12 section-header">
 							<h2 class="section-header">Quotes</h2>
-							<p>Here are some quotes from our studio members!</p>
 							<hr>
+							<p>Want to know what our members have to say about Infinity? Check out these quotes!</p>
 						</div>
 					</div>
-
 					<div class="row text-center">
 						<!--Grid for card deck-->
 						<div class="col-xs-8 col-sm-4">
@@ -339,7 +338,7 @@
 								<!--Card Body-->
 								<div class="card-body">
 									<h4 class="card-title mt-1">Octavia Bliss</h4>
-									<hr class="quotes">
+									<hr>
 									<!--Blockquote-->
 									<blockquote>Infinity is the best place to strengthen your yoga practice.
 										The instructors are dedicated, patient & thorough!
@@ -360,7 +359,7 @@
 								<!--Card Body-->
 								<div class="card-body">
 									<h4 class="card-title mt-1">Daniel Zen</h4>
-									<hr class="quotes">
+									<hr>
 									<!--Blockquote-->
 									<blockquote>
 										As a studio member, I love that I can find class times on
@@ -382,7 +381,7 @@
 								<!--Card Body-->
 								<div class="card-body">
 									<h4 class="card-title mt-1">Sara Solar</h4>
-									<hr class="quotes">
+									<hr>
 									<!--Blockquote-->
 									<blockquote>
 										As an Infinity member, I can contact them from their website,
