--- a/index.html
+++ b/index.html
@@ -196,86 +196,86 @@
 							<p>We hope to see you soon!</p>
 						</div>
 					</div>
-
 					<div class="row text-center">
 						<!--Grid for card deck-->
-						<div class="col-xs-8 col-sm-4">
-							<!--First Card-->
-							<div class="card schedule-card">
-								<div class="card-top top-color"></div>
-								<div class="avatar mx-auto white">
-									<img src="https://images.pexels.com/photos/3984340/pexels-photo-3984340.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-										alt="avatar 1" class="rounded-circle img-fluid">
+						<div class="card-deck">
+							<div class="col-xs-8 col-sm-4">
+								<!--First Card-->
+								<div class="card">
+									<div class="mx-auto">
+										<img src="https://images.pexels.com/photos/3984340/pexels-photo-3984340.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+											alt="Vinyasa Flow" class="card-img-top">
+									</div>
+									<!--Card Body-->
+									<div class="card-body">
+										<h4>Vinyasa Flow</h4>
+										<p class="text-muted">Thursday, 7:00pm | 90 minutes</p>
+										<hr>
+										<p>Flow through a sequence of Sun Salutations and standing postures, linking
+											breath and
+											movement.</p>
+										<div class="signUp"><a class="nav-item" href="#">Sign Up</a>
+											<svg width="130" height="65" viewBox="0 0 130 65"
+												xmlns="http://www.w3.org/2000/svg">
+												<rect x='0' y='0' fill='none' width='130' height='65' />
+											</svg>
+
+										</div>
+
+									</div>
 								</div>
-								<!--Card Body-->
-								<div class="card-body">
-									<h4 class="card-title mt-1">Vinyasa Flow</h4>
-									<p class="text-muted">Thursday, 7:00pm | 90 minutes</p>
-									<hr>
-									<p>Flow through a sequence of Sun Salutations and standing postures, linking breath
-										and movement.</p>
-									<div class="signUp"><a class="nav-item" href="#">Sign Up</a>
-										<svg width="130" height="65" viewBox="0 0 130 65"
-											xmlns="http://www.w3.org/2000/svg">
-											<rect x='0' y='0' fill='none' width='130' height='65' />
-										</svg>
+							</div>
+
+							<div class="col-xs-8 col-sm-4">
+								<!--Second Card-->
+								<div class="card">
+									<div class="mx-auto">
+										<img src="https://as1.ftcdn.net/jpg/03/00/95/98/500_F_300959883_9zsMfXdQs3y1mv9Pf8XkmYOxmjayUwwT.jpg"
+											alt="card-img-top" class="card-img-top">
+									</div>
+									<!--Card Body-->
+									<div class="card-body">
+										<h4 class="card-title mt-1">Restorative Yoga</h4>
+										<p class="text-muted">Sundays, 11:00am | 60 minutes</p>
+										<hr class="quotes">
+										<p>Use the support of blankets and bolsters to experience complete relaxation of
+											body &
+											mind.</p>
+										<div class="signUp"><a class="nav-item" href="#">Sign Up</a>
+											<svg width="130" height="65" viewBox="0 0 130 65"
+												xmlns="http://www.w3.org/2000/svg">
+												<rect x='0' y='0' fill='none' width='130' height='65' />
+											</svg>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-xs-8 col-sm-4">
+								<!--Third Card-->
+								<div class="card">
+									<div class="mx-auto">
+										<img src="https://as1.ftcdn.net/jpg/01/94/68/54/500_F_194685469_ItO60awbwDM2MIA3uq6Q2D9kEdKsONoW.jpg"
+											alt="avatar 3" class="card-img-top">
+										<!--Card Body-->
+										<div class="card-body">
+											<h4 class="card-title mt-1">Chakra Cleansing</h4>
+											<p class="text-muted">Mondays, 7:00pm | 90 minutes</p>
+											<hr>
+											<p> Experience healing as an instructor walks you through cleansing
+												techniques and
+												meditation.</p>
+											<div class="signUp"><a class="nav-item" href="#">Sign Up</a>
+												<svg width="130" height="65" viewBox="0 0 130 65"
+													xmlns="http://www.w3.org/2000/svg">
+													<rect x='0' y='0' fill='none' width='130' height='65' />
+												</svg>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-
-						<!--Grid for card deck-->
-						<div class="col-xs-8 col-sm-4">
-							<!--Second Card-->
-							<div class="card schedule-card">
-								<div class="card-top top-color"></div>
-								<div class="avatar mx-auto white">
-									<img src="https://as1.ftcdn.net/jpg/03/00/95/98/500_F_300959883_9zsMfXdQs3y1mv9Pf8XkmYOxmjayUwwT.jpg"
-										alt="card-img-top" class="card-img-top">
-								</div>
-								<!--Card Body-->
-								<div class="card-body">
-									<h4 class="card-title mt-1">Restorative Yoga</h4>
-									<p class="text-muted">Sundays, 11:00am | 60 minutes</p>
-									<hr>
-									<p>Use the support of blankets and bolsters to experience complete relaxation of
-										body & mind.</p>
-									<div class="signUp"><a class="nav-item" href="#">Sign Up</a>
-										<svg width="130" height="65" viewBox="0 0 130 65"
-											xmlns="http://www.w3.org/2000/svg">
-											<rect x='0' y='0' fill='none' width='130' height='65' />
-										</svg>
-									</div>
-								</div>
-							</div>
-						</div>
-
-
-						<div class="col-xs-8 col-sm-4">
-							<!--Third Card-->
-							<div class="card schedule-card">
-								<div class="card-top top-color"></div>
-								<div class="avatar mx-auto white">
-									<img src="https://as1.ftcdn.net/jpg/01/94/68/54/500_F_194685469_ItO60awbwDM2MIA3uq6Q2D9kEdKsONoW.jpg"
-										alt="avatar 3" class="rounded-circle img-fluid">
-								</div>
-								<!--Card Body-->
-								<div class="card-body">
-									<h4 class="card-title mt-1">Chakra Cleansing</h4>
-									<p class="text-muted">Mondays, 7:00pm | 90 minutes</p>
-									<hr>
-									<p> Experience healing as an instructor walks you through cleansing techniques and
-										meditation.</p>
-									<div class="signUp"><a class="nav-item" href="#">Sign Up</a>
-										<svg width="130" height="65" viewBox="0 0 130 65"
-											xmlns="http://www.w3.org/2000/svg">
-											<rect x='0' y='0' fill='none' width='130' height='65' />
-										</svg>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
 				</section>
 				<!--./schedule-->
 			</div>
@@ -346,6 +346,7 @@
 								</div>
 							</div>
 						</div>
+						<!--./contact-->
 
 						<!--Grid for card deck-->
 						<div class="col-xs-8 col-sm-4">
@@ -419,5 +420,4 @@
 		</script>
 
 </body>
-
 </html>
