Added missing div and fixed padding

--- a/index.html
+++ b/index.html
@@ -217,9 +217,7 @@
 											xmlns="http://www.w3.org/2000/svg">
 											<rect x='0' y='0' fill='none' width='130' height='65' />
 										</svg>
-	
 									</div>
-	
 								</div>
 							</div>
 						</div>
@@ -272,6 +270,7 @@
 							</div>
 						</div>
 					</div>
+				</div>
 			</section>
 			<!--./schedule-->
 		</div>
