--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 									</div>
 									<ul class="nav nav-justified">
 										<li class="nav-item">
-							  <a class="nav-link active signUp" data-toggle="tab" href="#about" role="tab">About
+							  <a class="nav-link active signUp" data-toggle="tab" href="#about1" role="tab">About
 								<svg width="130" height="65" viewBox="0 0 130 65" xmlns="http://www.w3.org/2000/svg">
 													<rect x='0' y='0' fill='none' width='130' height='65' />
 												</svg>
