--- a/index.html
+++ b/index.html
@@ -23,164 +23,163 @@
 </head>
 
 <!-- Body -->
-
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-	<!-- Header -->
-	<header>
-		<!-- Navbar -->
-		<nav class="navbar navbar-expand-lg navbar-light bg-light bg-shadow fixed-top">
-			<a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon">
-				</span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="#myPage">Home<span class="sr-only">(current)</span>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#about">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#schedule">Schedule</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#contact">Contact</a>
-					</li>
-				</ul>
-				<!--Social Media Links-->
-				<ul class="nav navbar-right ml-auto">
-					<li class="nav-item">
-						<a class="nav-link waves-effect waves-light" href="https://www.twitter.com" target="_blank">
-							<i class="fab fa-twitter-square"></i>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link waves-effect waves-light" href="https://www.facebook.com" target="_blank">
-							<i class="fab fa-facebook-square"></i>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link waves-effect waves-light" href="https://www.instagram.com" target="_blank">
-							<i class="fab fa-instagram-square"></i>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link waves-effect waves-light" href="https://www.pinterest.com" target="_blank">
-							<i class="fab fa-pinterest"></i>
-						</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-		<!--./navbar-->
-	</header>
-	<!--./header-->
+<!-- Header -->
+    <header>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light bg-shadow fixed-top">
+            <a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">
+                </span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#myPage">Home<span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#schedule">Schedule</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+                <!--Social Media Links-->
+                <ul class="nav navbar-right ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link waves-effect waves-light" href="https://www.twitter.com" target="_blank">
+                            <i class="fab fa-twitter-square"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link waves-effect waves-light" href="https://www.facebook.com" target="_blank">
+                            <i class="fab fa-facebook-square"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link waves-effect waves-light" href="https://www.instagram.com" target="_blank">
+                            <i class="fab fa-instagram-square"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link waves-effect waves-light" href="https://www.pinterest.com" target="_blank">
+                            <i class="fab fa-pinterest"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!--./navbar-->
+    </header>
+<!--./header-->
 
-	<!--Page Content-->
-	<main>
-		<!-- Jumbotron Container-->
-		<section class="jumbotron-container">
-			<!--Jumbotron Overlay-->
-			<div class="jumbotron-overlay">&nbsp;</div>
-			<!--./jumbotron-overlay-->
-			<div class="jumbotron-fluid">
-				<div class="container">
-					<div class="row">
-						<div class="col-12">
-							<h1 class="display-3">Infinity</h1>
-							<h2 class="lead" style="color:#f2f2f2;">Yoga and Meditation Studio</h2>
-							<p><a class="btn btn-info btn-lg" href="#schedule" role="button">Schedule &raquo;</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--./jumbotron-container-->
+<!--Page Content-->
+<main>
+<!-- Jumbotron Container-->
+<section class="jumbotron-container">
+    <!--Jumbotron Overlay-->
+    <div class="jumbotron-overlay">&nbsp;</div>
+    <!--./jumbotron-overlay-->
+    <div class="jumbotron-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="display-3">Infinity</h1>
+                    <h2 class="lead" style="color:#f2f2f2;">Yoga and Meditation Studio</h2>
+                    <p><a class="btn btn-info btn-lg" href="#schedule" role="button">Schedule &raquo;</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--./jumbotron-container-->
 
-		<!--About-->
-		<div class="container-wrapper-about">
-			<section id="about">
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-12 col-6">
-							<h2 class="section-header">About Us</h2>
-							<hr>
-						</div>
-					</div>
-					<div class="row">
-						<div class="flex-column col-12">
-							<p class="text-md-center font-weight-normal">The staff of Infinity is proud to offer diverse
-								classes, a flexible
-								schedule and fair prices. We love what we do and we believe everybody should experience
-								the peace, love
-								&amp;
-								eternal happiness that we feel at our studio.
-							</p>
-						</div>
-					</div>
-					<!--Why Infinity Container-->
-					<div class="container-fluid text-center">
-						<h3 class="about-header">Why Infinity?</h3>
-						<div class="row">
-							<div class="col-xs-8 col-sm-4">
-								<div class="about">
-									<i class="fas fa-brain d-sm-block"></i>
-									<h4 class="about-header">Mind</h4>
-									<p class="display-4 about-content">Yoga increases healthy brain function &amp;
-										mental
-										clarity</p>
-								</div>
-							</div>
-							<div class="col-xs-8 col-sm-4">
-								<div class="about">
-									<i class="fas fa-fire-alt d-sm-block"></i>
-									<h4 class="about-header">Body</h4>
-									<p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
-								</div>
-							</div>
-							<div class="col-xs-8 col-sm-4">
-								<div class="about">
-									<i class="fas fa-praying-hands d-sm-block"></i>
-									<h4 class="about-header">Spirit</h4>
-									<p class="display-4 about-content">Find your inner strength through meditation.</p>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-8 col-sm-4">
-								<div class="about">
-									<i class="fas fa-peace  d-sm-block"></i>
-									<h4 class="about-header">Peace</h4>
-									<p class="display-4 about-content">Forget all the stress and focus on you.
-									</p>
-								</div>
-							</div>
-							<div class="col-xs-8 col-sm-4">
-								<div class="about">
-									<i class="fas fa-heart d-sm-block"></i>
-									<h4 class="about-header">Love</h4>
-									<p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
-								</div>
-							</div>
-							<div class="col-xs-8 col-sm-4">
-								<div class="about">
-									<i class="fas fa-yin-yang d-sm-block"></i>
-									<h4 class="about-header">Harmony </h4>
-									<p class="display-4 about-content">Bring harmony &amp; balance into your life.</p>
-								</div>
-							</div>
-							<!--./why-infinity-container-->
-						</div>
-					</div>
-				</div>
-			</section>
-			<!--./about-->
-		</div>
+<!--About-->
+<div class="container-wrapper-about">
+    <section id="about">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-6">
+                    <h2 class="section-header">About Us</h2>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="flex-column col-12">
+                    <p class="text-md-center font-weight-normal">The staff of Infinity is proud to offer diverse
+                        classes, a flexible
+                        schedule and fair prices. We love what we do and we believe everybody should experience
+                        the peace, love
+                        &amp;
+                        eternal happiness that we feel at our studio.
+                    </p>
+                </div>
+            </div>
+            <!--Why Infinity Container-->
+            <div class="container-fluid text-center">
+                <h3 class="about-header">Why Infinity?</h3>
+                <div class="row">
+                    <div class="col-xs-8 col-sm-4">
+                        <div class="about">
+                            <i class="fas fa-brain d-sm-block"></i>
+                            <h4 class="about-header">Mind</h4>
+                            <p class="display-4 about-content">Yoga increases healthy brain function &amp;
+                                mental
+                                clarity</p>
+                        </div>
+                    </div>
+                    <div class="col-xs-8 col-sm-4">
+                        <div class="about">
+                            <i class="fas fa-fire-alt d-sm-block"></i>
+                            <h4 class="about-header">Body</h4>
+                            <p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
+                        </div>
+                    </div>
+                    <div class="col-xs-8 col-sm-4">
+                        <div class="about">
+                            <i class="fas fa-praying-hands d-sm-block"></i>
+                            <h4 class="about-header">Spirit</h4>
+                            <p class="display-4 about-content">Find your inner strength through meditation.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-8 col-sm-4">
+                        <div class="about">
+                            <i class="fas fa-peace  d-sm-block"></i>
+                            <h4 class="about-header">Peace</h4>
+                            <p class="display-4 about-content">Forget all the stress and focus on you.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-xs-8 col-sm-4">
+                        <div class="about">
+                            <i class="fas fa-heart d-sm-block"></i>
+                            <h4 class="about-header">Love</h4>
+                            <p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
+                        </div>
+                    </div>
+                    <div class="col-xs-8 col-sm-4">
+                        <div class="about">
+                            <i class="fas fa-yin-yang d-sm-block"></i>
+                            <h4 class="about-header">Harmony </h4>
+                            <p class="display-4 about-content">Bring harmony &amp; balance into your life.</p>
+                        </div>
+                    </div>
+                    <!--./why-infinity-container-->
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--./about-->
+</div>
 
 <!--Schedule Container-->
 <div class="container-wrapper-schedule">
@@ -242,7 +241,7 @@
                                                     <!-- Email Input field -->
                                                     <div class="form-row">
                                                         <div class="col-md-auto">
-                                                            <label for="email" class="email">Email Addr.</label>
+                                                            <label for="email" class="email">Email</label>
                                                             <input type="email" id="email" name="email_address"
                                                                 class="text-input" required="">
                                                         </div>
@@ -372,7 +371,7 @@
                                                     <!-- Email Input field -->
                                                     <div class="form-row">
                                                         <div class="col-md-auto">
-                                                            <label for="email" class="email">Email Addr.</label>
+                                                            <label for="email" class="email">Email</label>
                                                             <input type="email" id="email" name="email_address"
                                                                 class="text-input" required="">
                                                         </div>
@@ -592,7 +591,7 @@
 			<div class="col-xs-8 col-sm-4">
 				<p><i class="fas fa-map-marker-alt"></i><span> New York, New York</span>
 				</p>
-				<p><i class="fas fa-phone"></i> +1.212.000.0000 </p>
+				<p><i class="fas fa-phone"></i> 212.000.0000 </p>
 				<p><i class="fas fa-envelope-open"></i> owner@infinty.nyc</p>
 			</div>
 			<div class="col-xs-4 col-sm-8">
