Repaired signup tab by removing active class

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                         <div class="tab-pane fade" id="signup" role="tabpanel"
                                             aria-labelledby="pills-signup-tab">
                                             <div class="tab-content" id="pills-tabContent">
-                                                <div class="tab-pane fade show active" id="about1" role="tabpanel"
+                                                <div class="tab-pane fade show" id="about1" role="tabpanel"
                                                     aria-labelledby="about-tab"></div>
                                                 <!-- Sign Up Form -->
                                                 <form class="signup-form" method="POST"
@@ -298,7 +298,7 @@
                                 </div>
                                 <ul class="nav nav-justified">
                                     <li class="nav-item">
-                                        <a class="nav-link signUp active" data-toggle="tab" href="#about1" role="tab"
+                                        <a class="nav-link signUp" data-toggle="tab" href="#about1" role="tab"
                                             aria-selected="true">About
                                             <svg width="130" height="65" viewBox="0 0 130 65"
                                                 xmlns="http://www.w3.org/2000/svg">
@@ -427,7 +427,7 @@
                                 </div>
                                 <ul class="nav nav-justified">
                                     <li class="nav-item">
-                                        <a class="nav-link signUp active" data-toggle="tab" href="#about2" role="tab"
+                                        <a class="nav-link signUp" data-toggle="tab" href="#about2" role="tab"
                                             aria-selected="true">About
                                             <svg width="130" height="65" viewBox="0 0 130 65"
                                                 xmlns="http://www.w3.org/2000/svg">
@@ -552,7 +552,7 @@
                                     </div>
                                     <ul class="nav nav-justified">
                                         <li class="nav-item">
-                                            <a class="nav-link signUp active" data-toggle="tab" href="#about3"
+                                            <a class="nav-link signUp" data-toggle="tab" href="#about3"
                                                 role="tab" aria-selected="true">About
                                                 <svg width="130" height="65" viewBox="0 0 130 65"
                                                     xmlns="http://www.w3.org/2000/svg">
